--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "format": "prettier --plugin-search-dir . --write ."
     },
     "devDependencies": {
+        "@graphql-codegen/cli": "^3.2.2",
+        "@graphql-codegen/typescript": "^3.0.2",
+        "@graphql-codegen/typescript-operations": "^3.0.2",
         "@playwright/test": "^1.28.1",
         "@sveltejs/adapter-auto": "^2.0.0",
         "@sveltejs/adapter-static": "^2.0.1",
@@ -25,6 +28,7 @@
         "eslint": "^8.28.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-svelte3": "^4.0.0",
+        "graphql-codegen-svelte-apollo": "^1.1.0",
         "postcss": "^8.4.21",
         "prettier": "^2.8.0",
         "prettier-plugin-svelte": "^2.8.1",
@@ -37,5 +41,8 @@
         "vite": "^4.0.0",
         "vitest": "^0.25.3"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "graphql": "^16.6.0"
+    }
 }
