--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true
-	}
+	},
+	"include": ["src/**/*", "src/node_modules", ".svelte-kit/ambient.d.ts"]
 }
