--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,28 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
-	"compilerOptions": {
-		"plugins": [
-			{
-				"name": "typescript-svelte-plugin"
-			}
-		],
-		"allowJs": true,
-		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"strict": true
-	},
-	"include": ["src/**/*", "src/node_modules", ".svelte-kit/ambient.d.ts"]
+    "extends": "./.svelte-kit/tsconfig.json",
+    "compilerOptions": {
+        "plugins": [
+            {
+                "name": "typescript-svelte-plugin"
+            }
+        ],
+        "allowJs": true,
+        "checkJs": true,
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "strict": true,
+        "rootDirs": [
+            ".",
+            "./.svelte-kit/types",
+            "./$houdini/types"
+        ]
+    },
+    "include": [
+        "src/**/*",
+        "src/node_modules",
+        ".svelte-kit/ambient.d.ts"
+    ]
 }
