--- a/package.json
+++ b/package.json
@@ -1,46 +1,48 @@
 {
-    "name": "syahrulanuar.info",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "dev": "vite dev",
-        "build": "vite build",
-        "preview": "vite preview",
-        "test": "playwright test",
-        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-        "test:unit": "vitest",
-        "lint": "prettier --plugin-search-dir . --check . && eslint .",
-        "format": "prettier --plugin-search-dir . --write .",
-        "generate": "graphql-codegen"
-    },
-    "devDependencies": {
-        "@sveltejs/adapter-auto": "^2.0.0",
-        "@sveltejs/adapter-static": "^2.0.1",
-        "@sveltejs/adapter-vercel": "^2.1.1",
-        "@sveltejs/kit": "^1.5.0",
-        "@typescript-eslint/eslint-plugin": "^5.45.0",
-        "@typescript-eslint/parser": "^5.45.0",
-        "autoprefixer": "^10.4.13",
-        "eslint": "^8.28.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-svelte3": "^4.0.0",
-        "postcss": "^8.4.21",
-        "prettier": "^2.8.0",
-        "prettier-plugin-svelte": "^2.8.1",
-        "svelte": "^3.54.0",
-        "svelte-check": "^3.0.1",
-        "tailwindcss": "^3.2.7",
-        "tslib": "^2.4.1",
-        "typescript": "^5.0.4",
-        "typescript-svelte-plugin": "^0.3.16",
-        "vite": "^4.0.0",
-        "vitest": "^0.25.3",
-        "houdini": "^1.2.2",
-        "houdini-svelte": "^1.2.2"
-    },
-    "type": "module",
-    "dependencies": {
-        "graphql": "^16.6.0"
-    }
+	"name": "syahrulanuar.info",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "playwright test",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test:unit": "vitest",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
+		"generate": "graphql-codegen"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.1",
+		"@sveltejs/adapter-vercel": "^2.1.1",
+		"@sveltejs/kit": "^1.5.0",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"houdini": "^1.2.2",
+		"houdini-svelte": "^1.2.2",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"svelte": "^3.54.0",
+		"svelte-check": "^3.0.1",
+		"tailwindcss": "^3.2.7",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.4",
+		"typescript-svelte-plugin": "^0.3.16",
+		"vite": "^4.0.0",
+		"vitest": "^0.25.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"@datocms/svelte": "^1.1.1",
+		"datocms-structured-text-utils": "^2.0.4",
+		"graphql": "^16.6.0"
+	}
 }
