--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"houdini": "^1.2.2",
+		"houdini-svelte": "^1.2.2",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
@@ -39,6 +41,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@datocms/svelte": "^1.1.1",
+		"datocms-structured-text-utils": "^2.0.4",
 		"graphql": "^16.6.0"
 	}
 }
